Bug 1836805: test(webgpu): use an explicit `os == "win"` for some CTS cases r=webgpu-reviewers,nical
Differential Revision: https://phabricator.services.mozilla.com/D186576

--- a/testing/web-platform/mozilla/meta/webgpu/chunked/11/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/11/cts.https.html.ini
@@ -4,184 +4,244 @@
 
 [cts.https.html?q=webgpu:api,validation,capability_checks,features,texture_formats:canvas_configuration:*]
   [:format="depth32float-stencil8";canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="depth32float-stencil8";canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc1-rgba-unorm";canvasType="onscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc1-rgba-unorm";canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc1-rgba-unorm";canvasType="offscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc1-rgba-unorm";canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc1-rgba-unorm-srgb";canvasType="onscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc1-rgba-unorm-srgb";canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc1-rgba-unorm-srgb";canvasType="offscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc1-rgba-unorm-srgb";canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc2-rgba-unorm";canvasType="onscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc2-rgba-unorm";canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc2-rgba-unorm";canvasType="offscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc2-rgba-unorm";canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc2-rgba-unorm-srgb";canvasType="onscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc2-rgba-unorm-srgb";canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc2-rgba-unorm-srgb";canvasType="offscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc2-rgba-unorm-srgb";canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc3-rgba-unorm";canvasType="onscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc3-rgba-unorm";canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc3-rgba-unorm";canvasType="offscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc3-rgba-unorm";canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc3-rgba-unorm-srgb";canvasType="onscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc3-rgba-unorm-srgb";canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc3-rgba-unorm-srgb";canvasType="offscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc3-rgba-unorm-srgb";canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc4-r-unorm";canvasType="onscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc4-r-unorm";canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc4-r-unorm";canvasType="offscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc4-r-unorm";canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc4-r-snorm";canvasType="onscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc4-r-snorm";canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc4-r-snorm";canvasType="offscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc4-r-snorm";canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc5-rg-unorm";canvasType="onscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc5-rg-unorm";canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc5-rg-unorm";canvasType="offscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc5-rg-unorm";canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc5-rg-snorm";canvasType="onscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc5-rg-snorm";canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc5-rg-snorm";canvasType="offscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc5-rg-snorm";canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc6h-rgb-ufloat";canvasType="onscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc6h-rgb-ufloat";canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc6h-rgb-ufloat";canvasType="offscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc6h-rgb-ufloat";canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc6h-rgb-float";canvasType="onscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc6h-rgb-float";canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc6h-rgb-float";canvasType="offscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc6h-rgb-float";canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc7-rgba-unorm";canvasType="onscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc7-rgba-unorm";canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc7-rgba-unorm";canvasType="offscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc7-rgba-unorm";canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc7-rgba-unorm-srgb";canvasType="onscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc7-rgba-unorm-srgb";canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc7-rgba-unorm-srgb";canvasType="offscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="bc7-rgba-unorm-srgb";canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="depth32float-stencil8";canvasType="onscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="depth32float-stencil8";canvasType="offscreen";enable_required_feature=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
 
 [cts.https.html?q=webgpu:api,validation,compute_pipeline:overrides,workgroup_size,limits:*]
@@ -558,106 +618,140 @@
 
 [cts.https.html?q=webgpu:api,validation,capability_checks,features,texture_formats:canvas_configuration_view_formats:*]
   [:viewFormats=["depth32float-stencil8"\];canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["depth32float-stencil8"\];canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc1-rgba-unorm"\];canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc1-rgba-unorm"\];canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc1-rgba-unorm-srgb"\];canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc1-rgba-unorm-srgb"\];canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc2-rgba-unorm"\];canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc2-rgba-unorm"\];canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc2-rgba-unorm-srgb"\];canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc2-rgba-unorm-srgb"\];canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc3-rgba-unorm"\];canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc3-rgba-unorm"\];canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc3-rgba-unorm-srgb"\];canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc3-rgba-unorm-srgb"\];canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc4-r-unorm"\];canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc4-r-unorm"\];canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc4-r-snorm"\];canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc4-r-snorm"\];canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc5-rg-unorm"\];canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc5-rg-unorm"\];canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc5-rg-snorm"\];canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc5-rg-snorm"\];canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc6h-rgb-ufloat"\];canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc6h-rgb-ufloat"\];canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc6h-rgb-float"\];canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc6h-rgb-float"\];canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc7-rgba-unorm"\];canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc7-rgba-unorm"\];canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc7-rgba-unorm-srgb"\];canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc7-rgba-unorm-srgb"\];canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bgra8unorm","bc1-rgba-unorm"\];canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bgra8unorm","bc1-rgba-unorm"\];canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc1-rgba-unorm","bgra8unorm"\];canvasType="onscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:viewFormats=["bc1-rgba-unorm","bgra8unorm"\];canvasType="offscreen";enable_required_feature=false]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
 
 [cts.https.html?q=webgpu:api,validation,compute_pipeline:limits,invocations_per_workgroup:*]
