--- a/testing/web-platform/mozilla/meta/webgpu/chunked/30/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/30/cts.https.html.ini
@@ -221,7 +221,8 @@
 
 [cts.https.html?q=webgpu:shader,execution,evaluation_order:binary_mixed:*]
   [:name="ArithAndLogical"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:name="LogicalAndArith"]
     expected: FAIL
@@ -238,10 +239,11 @@
 
 [cts.https.html?q=webgpu:shader,execution,evaluation_order:index_accessor:*]
   [:name="LeftSE"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:name="RightSE"]
-    expected: FAIL
+    expected: [FAIL, PASS]
 
   [:name="BothSE"]
     expected: FAIL
@@ -249,7 +251,8 @@
 
 [cts.https.html?q=webgpu:shader,execution,evaluation_order:call:*]
   [:name="OneSE"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:name="AllSE"]
     expected: FAIL
@@ -444,7 +447,8 @@
 
 [cts.https.html?q=webgpu:shader,execution,evaluation_order:binary_arith:*]
   [:name="BothSE"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:name="LeftSE"]
     expected: FAIL
@@ -522,7 +526,8 @@
 
 [cts.https.html?q=webgpu:shader,execution,evaluation_order:member_accessor:*]
   [:name="Vec"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:name="Struct"]
     expected: FAIL
@@ -535,7 +540,8 @@
 
 [cts.https.html?q=webgpu:shader,execution,evaluation_order:binary_logical:*]
   [:name="BothSE"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:name="LeftSE"]
     expected: FAIL
@@ -573,7 +579,8 @@
 
 [cts.https.html?q=webgpu:shader,execution,evaluation_order:type_constructor:*]
   [:name="Struct"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:name="Array1D"]
     expected: FAIL
