--- a/testing/web-platform/mozilla/meta/webgpu/chunked/6/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/6/cts.https.html.ini
@@ -173,7 +173,8 @@
     expected: FAIL
 
   [:format="depth32float-stencil8";unclippedDepth=true;writeDepth=false;multisampled=true]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:format="depth32float-stencil8";unclippedDepth=true;writeDepth=true;multisampled=false]
     expected: FAIL
