--- a/testing/web-platform/mozilla/meta/webgpu/chunked/9/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/9/cts.https.html.ini
@@ -45,7 +45,8 @@
 
 [cts.https.html?q=webgpu:api,validation,buffer,create:createBuffer_invalid_and_oom:*]
   [:]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
 
 [cts.https.html?q=webgpu:api,validation,buffer,mapping:mapAsync,state,mappedAtCreation:*]
