--- a/testing/web-platform/mozilla/meta/webgpu/chunked/32/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/32/cts.https.html.ini
@@ -128,7 +128,8 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -155,7 +156,8 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:inputSource="uniform";vectorize=3]
     expected: FAIL
@@ -244,7 +246,8 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:inputSource="uniform";vectorize=3]
     expected: FAIL
