--- a/testing/web-platform/mozilla/meta/webgpu/chunked/46/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/46/cts.https.html.ini
@@ -37,241 +37,319 @@
 
 [cts.https.html?q=webgpu:shader,validation,parse,align:align_required_alignment:*]
   [:address_space="storage";align=1;type={"name":"i32","storage":4,"uniform":4}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=1;type={"name":"u32","storage":4,"uniform":4}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=1;type={"name":"f32","storage":4,"uniform":4}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=1;type={"name":"atomic%3Ci32%3E","storage":4,"uniform":4}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=1;type={"name":"vec2%3Ci32%3E","storage":8,"uniform":8}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=1;type={"name":"vec3%3Cu32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=1;type={"name":"vec4%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=1;type={"name":"mat2x2%3Cf32%3E","storage":8,"uniform":8}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=1;type={"name":"mat3x2%3Cf32%3E","storage":8,"uniform":8}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=1;type={"name":"mat4x2%3Cf32%3E","storage":8,"uniform":8}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=1;type={"name":"mat2x3%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=1;type={"name":"mat3x3%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=1;type={"name":"mat4x3%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=1;type={"name":"mat2x4%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=1;type={"name":"mat3x4%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=1;type={"name":"mat4x4%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=1;type={"name":"array%3Cvec2%3Ci32%3E,%202%3E","storage":8,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=1;type={"name":"array%3Cvec4%3Ci32%3E,%202%3E","storage":8,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=1;type={"name":"S","storage":8,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"i32","storage":4,"uniform":4}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"u32","storage":4,"uniform":4}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"f32","storage":4,"uniform":4}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"atomic%3Ci32%3E","storage":4,"uniform":4}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"vec2%3Ci32%3E","storage":8,"uniform":8}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"vec3%3Cu32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"vec4%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"mat2x2%3Cf32%3E","storage":8,"uniform":8}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"mat3x2%3Cf32%3E","storage":8,"uniform":8}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"mat4x2%3Cf32%3E","storage":8,"uniform":8}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"mat2x3%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"mat3x3%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"mat4x3%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"mat2x4%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"mat3x4%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"mat4x4%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"array%3Cvec2%3Ci32%3E,%202%3E","storage":8,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"array%3Cvec4%3Ci32%3E,%202%3E","storage":8,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align=2;type={"name":"S","storage":8,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="storage";align="alignment";type={"name":"array%3Cvec4%3Ci32%3E,%202%3E","storage":8,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=1;type={"name":"i32","storage":4,"uniform":4}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=1;type={"name":"u32","storage":4,"uniform":4}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=1;type={"name":"f32","storage":4,"uniform":4}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=1;type={"name":"vec2%3Ci32%3E","storage":8,"uniform":8}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=1;type={"name":"vec3%3Cu32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=1;type={"name":"vec4%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=1;type={"name":"mat2x2%3Cf32%3E","storage":8,"uniform":8}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=1;type={"name":"mat3x2%3Cf32%3E","storage":8,"uniform":8}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=1;type={"name":"mat4x2%3Cf32%3E","storage":8,"uniform":8}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=1;type={"name":"mat2x3%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=1;type={"name":"mat3x3%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=1;type={"name":"mat4x3%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=1;type={"name":"mat2x4%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=1;type={"name":"mat3x4%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=1;type={"name":"mat4x4%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=1;type={"name":"array%3Cvec2%3Ci32%3E,%202%3E","storage":8,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=1;type={"name":"array%3Cvec4%3Ci32%3E,%202%3E","storage":8,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=1;type={"name":"S","storage":8,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=2;type={"name":"i32","storage":4,"uniform":4}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=2;type={"name":"u32","storage":4,"uniform":4}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=2;type={"name":"f32","storage":4,"uniform":4}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=2;type={"name":"vec2%3Ci32%3E","storage":8,"uniform":8}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=2;type={"name":"vec3%3Cu32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=2;type={"name":"vec4%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=2;type={"name":"mat2x2%3Cf32%3E","storage":8,"uniform":8}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=2;type={"name":"mat3x2%3Cf32%3E","storage":8,"uniform":8}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=2;type={"name":"mat4x2%3Cf32%3E","storage":8,"uniform":8}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=2;type={"name":"mat2x3%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=2;type={"name":"mat3x3%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=2;type={"name":"mat4x3%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=2;type={"name":"mat2x4%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=2;type={"name":"mat3x4%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=2;type={"name":"mat4x4%3Cf32%3E","storage":16,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=2;type={"name":"array%3Cvec2%3Ci32%3E,%202%3E","storage":8,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=2;type={"name":"array%3Cvec4%3Ci32%3E,%202%3E","storage":8,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=2;type={"name":"S","storage":8,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align="alignment";type={"name":"array%3Cvec2%3Ci32%3E,%202%3E","storage":8,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:address_space="uniform";align=32;type={"name":"array%3Cvec2%3Ci32%3E,%202%3E","storage":8,"uniform":16}]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
 
 [cts.https.html?q=webgpu:shader,execution,shader_io,shared_structs:shared_with_buffer:*]
   [:]
-    expected: FAIL
-
+    # TODO: Currently has issues being followed up with; see <https://bugzilla.mozilla.org/show_bug.cgi?id=1836479>.
+    expected:
+      if os == "win": FAIL
 
 [cts.https.html?q=webgpu:shader,execution,padding:struct_nested:*]
 
