--- a/testing/web-platform/mozilla/meta/webgpu/chunked/50/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/50/cts.https.html.ini
@@ -460,332 +460,438 @@
 
 [cts.https.html?q=webgpu:web_platform,canvas,configure:format:*]
   [:canvasType="onscreen";format="r8unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="r8snorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="r8uint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="r8sint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="r16uint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="r16sint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="r16float"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rg8unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rg8snorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rg8uint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rg8sint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="r32uint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="r32sint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="r32float"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rg16uint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rg16sint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rg16float"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rgba8unorm-srgb"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rgba8snorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rgba8uint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rgba8sint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="bgra8unorm-srgb"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rgb10a2unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rg11b10ufloat"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rgb9e5ufloat"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rg32uint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rg32sint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rg32float"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rgba16uint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rgba16sint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rgba16float"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rgba32uint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rgba32sint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="rgba32float"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="depth32float"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="depth16unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="stencil8"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="depth24plus"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="depth24plus-stencil8"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="bc1-rgba-unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="bc1-rgba-unorm-srgb"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="bc2-rgba-unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="bc2-rgba-unorm-srgb"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="bc3-rgba-unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="bc3-rgba-unorm-srgb"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="bc4-r-unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="bc4-r-snorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="bc5-rg-unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="bc5-rg-snorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="bc6h-rgb-ufloat"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="bc6h-rgb-float"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="bc7-rgba-unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="bc7-rgba-unorm-srgb"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="r8unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="r8snorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="r8uint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="r8sint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="r16uint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="r16sint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="r16float"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rg8unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rg8snorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rg8uint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rg8sint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="r32uint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="r32sint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="r32float"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rg16uint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rg16sint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rg16float"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rgba8unorm-srgb"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rgba8snorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rgba8uint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rgba8sint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="bgra8unorm-srgb"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rgb10a2unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rg11b10ufloat"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rgb9e5ufloat"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rg32uint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rg32sint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rg32float"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rgba16uint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rgba16sint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rgba16float"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rgba32uint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rgba32sint"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="rgba32float"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="depth32float"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="depth16unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="stencil8"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="depth24plus"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="depth24plus-stencil8"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="depth32float-stencil8"]
     expected:
       if os == "mac": PASS
-      FAIL
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="bc1-rgba-unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="bc1-rgba-unorm-srgb"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="bc2-rgba-unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="bc2-rgba-unorm-srgb"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="bc3-rgba-unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="bc3-rgba-unorm-srgb"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="bc4-r-unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="bc4-r-snorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="bc5-rg-unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="bc5-rg-snorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="bc6h-rgb-ufloat"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="bc6h-rgb-float"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="bc7-rgba-unorm"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="offscreen";format="bc7-rgba-unorm-srgb"]
-    expected: FAIL
+    expected:
+      if os == "win": FAIL
 
   [:canvasType="onscreen";format="depth32float-stencil8"]
     expected:
       if os == "mac": PASS
-      FAIL
+      if os == "win": FAIL
 
 
 [cts.https.html?q=webgpu:util,texture,texture_ok:norm:*]
